let issue toc flow around download image on small displays

--- a/issues/style.css
+++ b/issues/style.css
@@ -1317,6 +1317,20 @@ a.download_button:active {
 	flex: 0 auto;
 }
 
+/* let toc flow around pdf download on small displays */
+@media (max-width: 768px) {
+	.toc_container {
+		display: flow-root; /* automatically clears floats */
+	}
+
+	.download_full_pdf {
+		float: right;
+		margin: 0 1rem 1rem 1rem;
+		max-width: 50%;
+		box-sizing: border-box;
+	}
+}
+
 .toc {
 	order: 1;
 	flex: auto;
